docs/tests/typing/bad/testfile-while-1.cpp
void foo() {}
int main() { while(foo()); }
